Fixed z-index config, things not clickable through header

--- a/css/styles-generic.css
+++ b/css/styles-generic.css
@@ -130,7 +130,7 @@ body.scrolled::before {
     width: 100vw;
     height: calc(100vh + 15rem);
     z-index: 25;
-    pointer-events: auto;
+    pointer-events: none;
     background: rgba(0, 0, 0, 0.01);
     box-sizing: border-box;
     cursor: default;
