--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -341,7 +341,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: 9999;
+  z-index: 10;
 }
 .other-notable-work-labs-container {
   display: flex;
